--- a/README.gmi
+++ b/README.gmi
@@ -19,8 +19,6 @@ feel the city's pulse kicking in, then... let's get moving.
 you've got until the song finishes, so no distractions, ok?
 
 ```sh
-$ make config.h
-$ vim config.h # tweak to your pleasure
 $ make && make install
 $ rcctl enable kaori
 $ rcctl start kaori
@@ -40,4 +38,4 @@ $ rcctl start kaori
 
 ## author
 
-=> https://blekksprut.net/ 蜂谷栗栖
+=> //blekksprut.net/ 蜂谷栗栖
