--- a/README.gmi
+++ b/README.gmi
@@ -26,8 +26,8 @@ $ rcctl start kaori
 
 ## echo through the city's pulse
 
-* kaori listens on ::1
-* combine with relayd to share with the world
+* kaori listens on [::1]:1965 unless told otherwise
+* bridge the gap to worlds beyond with relayd
 
 ## geminispace
 
